--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ a.text-\[#ff6b35\]:hover,.text-\[#ff6b35\]:hover,.group:hover span {
                 <div class="hidden md:flex items-center space-x-6 lg:space-x-8">
                     <a href="#about" class="text-[#e8e6e3] hover:text-[#ff6b35] transition-colors font-medium text-sm lg:text-base">About</a>
                     <a href="#teams" class="text-[#e8e6e3] hover:text-[#ff6b35] transition-colors font-medium text-sm lg:text-base">Teams</a>
-                    <a href="#sponsors" class="text-[#e8e6e3] hover:text-[#ff6b35] transition-colors font-medium text-sm lg:text-base">Sponsors</a>
+                    <a href="sponsors.html" class="text-[#e8e6e3] hover:text-[#ff6b35] transition-colors font-medium text-sm lg:text-base">Sponsors</a>
                     <a href="#gallery" class="text-[#e8e6e3] hover:text-[#ff6b35] transition-colors font-medium text-sm lg:text-base">Gallery</a>
                     <a href="#contact" class="text-[#e8e6e3] hover:text-[#ff6b35] transition-colors font-medium text-sm lg:text-base">Contact</a>
                     <button id="dark-mode-toggle" class="text-[#e8e6e3] hover:text-[#ff6b35] transition-colors p-2">
@@ -190,7 +190,7 @@ a.text-\[#ff6b35\]:hover,.text-\[#ff6b35\]:hover,.group:hover span {
             <nav class="space-y-4">
                 <a href="#about" class="block text-[#e8e6e3] hover:text-[#ff6b35] transition-colors font-medium text-lg">About</a>
                 <a href="#teams" class="block text-[#e8e6e3] hover:text-[#ff6b35] transition-colors font-medium text-lg">Teams</a>
-                <a href="#sponsors" class="block text-[#e8e6e3] hover:text-[#ff6b35] transition-colors font-medium text-lg">Sponsors</a>
+                <a href="sponsors.html" class="block text-[#e8e6e3] hover:text-[#ff6b35] transition-colors font-medium text-lg">Sponsors</a>
                 <a href="#gallery" class="block text-[#e8e6e3] hover:text-[#ff6b35] transition-colors font-medium text-lg">Gallery</a>
                 <a href="#contact" class="block text-[#e8e6e3] hover:text-[#ff6b35] transition-colors font-medium text-lg">Contact</a>
                 <a href="meet-the-team.html" class="block bg-[#ff6b35] text-white px-6 py-3 rounded-lg font-medium hover:bg-[#e55a2b] transition-all text-center">
