--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -153,7 +153,7 @@ nav {
     <div class="hidden md:flex items-center space-x-6">
       <a href="index.html#about" class="hover:text-[var(--orange)] transition">About</a>
       <a href="index.html#teams" class="hover:text-[var(--orange)] transition">Teams</a>
-      <a href="index.html#sponsors" class="hover:text-[var(--orange)] transition">Sponsors</a>
+      <a href="sponsors.html" class="hover:text-[var(--orange)] transition">Sponsors</a>
       <a href="index.html#contact" class="hover:text-[var(--orange)] transition">Contact</a>
       <button id="dark-toggle" class="hover:text-[var(--orange)] transition">
         <i data-feather="moon" class="w-5 h-5"></i>
@@ -172,7 +172,7 @@ nav {
     <div class="flex flex-col space-y-4 mt-12">
       <a href="index.html#about" class="text-white hover:text-[var(--orange)] transition">About</a>
       <a href="index.html#teams" class="text-white hover:text-[var(--orange)] transition">Teams</a>
-      <a href="index.html#sponsors" class="text-white hover:text-[var(--orange)] transition">Sponsors</a>
+      <a href="sponsors.html" class="text-white hover:text-[var(--orange)] transition">Sponsors</a>
       <a href="index.html#contact" class="text-white hover:text-[var(--orange)] transition">Contact</a>
       <button id="dark-toggle-mobile" class="text-left text-white hover:text-[var(--orange)] transition">
         <i data-feather="moon" class="w-5 h-5 inline"></i> Dark Mode
